0x01-python-if_else_loops_functions/In
sts.h:17:1: error: unknown type name ‘size_t’

   17 | size_t print_listint(const listint_t *h);

      | ^~~~~~

lists.h:1:1: note: ‘size_t’ is defined in header ‘<stddef.h>’; did you forget to ‘#include <stddef.h>’?

  +++ |+#include <stddef.h>

    1 | #ifndef LISTS_H

13-insert_number.c: In function ‘insert_node’:

13-insert_number.c:15:15: error: implicit declaration of function ‘malloc’ [-Werror=implicit-function-declaration]

   15 |         new = malloc(sizeof(listint_t));

      |               ^~~~~~

13-insert_number.c:15:15: error: incompatible implicit declaration of built-in function ‘malloc’ [-Werror]

13-insert_number.c:2:1: note: include ‘<stdlib.h>’ or provide a declaration of ‘malloc’

    1 | #include "lists.h"

  +++ |+#include <stdlib.h>

    2 | 

13-insert_number.c:16:20: error: ‘NULL’ undeclared (first use in this function)

   16 |         if (new == NULL)

      |                    ^~~~

13-insert_number.c:2:1: note: ‘NULL’ is defined in header ‘<stddef....
